# computer-graphics

./: README.md
feladat/: Makefile
feladat/include/: callbacks.h  camera.h  game.h  hud.h  init.h  scene.h  texture.h  utils.h
feladat/src/: callbacks.c  camera.c  game.c  hud.c  init.c  main.c  scene.c  texture.c  utils.c
gyakorlatok/1/circle/: Makefile
gyakorlatok/1/circle/src/: circle.c  circle.h
gyakorlatok/1/cuboid/: Makefile
gyakorlatok/1/cuboid/src/: circle.h  cuboid.c  cuboid.h  main.c
gyakorlatok/1/tiger/: CMakeLists.txt  draw.c  draw.h  model.h
gyakorlatok/1/tiger/src/: model.c  tiger.c
gyakorlatok/circle/: Makefile
gyakorlatok/circle/src/: main.c
gyakorlatok/cube/: Makefile
gyakorlatok/cube/include/: callbacks.h  camera.h  texture.h  utils.h
gyakorlatok/cube/src/: init.c  utils.c
gyakorlatok/cuboid/src/: cuboid.c  cuboid.h
gyakorlatok/gun/: Makefile
gyakorlatok/gun/src/: gun.c
gyakorlatok/matrices/: Makefile
gyakorlatok/matrices/src/: main.c  matrix.c  matrix.h  matrix_stack.c  matrix_stack.h
gyakorlatok/origin/: Makefile
gyakorlatok/origin/include/: callbacks.h  camera.h  init.h  scene.h  utils.h
gyakorlatok/origin/src/: callbacks.c  camera.c  init.c  main.c  scene.c  utils.c
gyakorlatok/pong/: Makefile
gyakorlatok/pong/include/: ball.h  callbacks.h  draw.h  game.h  init.h  pad.h
gyakorlatok/pong/src/: ball.c  callbacks.c  draw.c  game.c  init.c  main.c  pad.c
gyakorlatok/tiger/: Makefile
gyakorlatok/tiger/src/: draw.c  model.c  tiger.c
